<resources>
    <string name="app_name">Meus Livros</string>
    <string name="cadastrar_novo">CADASTRAR NOVO</string>
    <string name="listar_livros">LISTAR LIVROS</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="titulo">Título:</string>
    <string name="autor">Autor:</string>
    <string name="ano">Ano:</string>
    <string name="nota">Nota:</string>
    <string name="livro_salvo">Livro Salvo</string>
    <string name="livro_deletado">Livro Deletado</string>
    <string name="cancelado">Cancelado</string>
    <string name="nenhum_livro_cadastrado">Nenhum Livro Cadastrado</string>
    <string name="buscar">BUSCAR</string>
    <string name="deletar">DELETAR</string>
    <string name="proximo">PRÓXIMO</string>
    <string name="anterior">ANTERIOR</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">RECYCLER VIEW</string>
    <string name="pageview">PAGE VIEW</string>
    <string name="swipe_e_dragdrop">SWIPE E DRAGDROP</string>
    <string name="gridview">GridView</string>
</resources>
