<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/grey">

    <Button
        android:id="@+id/cadastrarBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/cadastrar_novo"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/listarBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/listar_livros"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/buscarBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/buscar"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/deletarBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/deletar"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/listViewBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/list_view"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/gridViewBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/gridview"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/recyclerViewBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/recycler_view"
        android:textColor="@color/branco" />

    <Button
        android:id="@+id/swipeDragDropBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/swipe_e_dragdrop"
        android:textColor="@color/branco" />


    <Button
        android:id="@+id/pageViewBt"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimary"
        android:text="@string/pageview"
        android:textColor="@color/branco" />

</LinearLayout>