<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastrarLivrosActivity"
    android:gravity="center"
    android:background="@color/grey">
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/titulo"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/tituloEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/autor"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/autorEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/ano"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/anoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_column="1"
            android:layout_row="2"
            android:inputType="number"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="20sp"
            android:text="@string/nota"
            android:textColor="@color/black" />

        <RatingBar
            android:id="@+id/estrelinha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginTop="10sp"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:background="@color/colorPrimary"
            android:text="@string/salvar"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/cancelarBt"
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:background="@color/colorPrimary"
            android:text="@string/cancelar"
            android:textColor="@color/branco" />
    </LinearLayout>


</LinearLayout>