<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarLivrosActivity"
    android:background="@color/grey">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="15sp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/autor"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="Ano:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="Nota:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/black" />
    </GridLayout>


    <TextView
        android:id="@+id/nenhum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_livro_cadastrado"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:srcCompat="@drawable/book" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center">

        <Button
            android:id="@+id/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ANTERIOR"
            android:visibility="visible"
            android:background="@color/colorPrimary"
            android:textColor="@color/branco"
            android:layout_gravity="bottom"
            android:layout_marginRight="150sp"/>

        <Button
            android:id="@+id/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRÓXIMO"
            android:visibility="visible"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:textColor="@color/branco"/>
    </LinearLayout>

</LinearLayout>